src/main/java/com/example/credit_service_project/service/errors/exceptions/ManagerNotFoundException.java
package com.example.credit_service_project.service.errors.exceptions;

public class ManagerNotFoundException extends RuntimeException {
    public ManagerNotFoundException(String message) {
        super(message);
    }
}
